# stm32f1-hal

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yml
examples/: blinky.rs
examples/f103c8/: .gitignore  Cargo.toml
examples/f103c8/src/: led_task.rs  main.rs  uart_task.rs
scripts/: base.py  build.py  generate_dma_table.py  generate_remap_table.py  sync_code.py
scripts/table/: stm32f1_dma_table.csv  stm32f1_remap_device.csv  stm32f1_remap_peripheral.csv
src/: afio.rs  bb.rs  dma.rs  interrupt.rs  lib.rs  mcu.rs  nvic_scb.rs  os.rs  prelude.rs  time.rs
src/afio/: mod.rs  timer_remap.rs  uart_remap.rs
src/common/: mod.rs  os.rs  ringbuf.rs  simplest_heap.rs  timer.rs  wrap_trait.rs
src/common/dma/: circular_buffer_rx.rs  mod.rs  ringbuf_tx.rs
src/common/timer/: counter.rs  delay.rs  fix_timer.rs  mod.rs  pwm.rs
src/common/uart/: mod.rs  uart_dma.rs  uart_dma_ringbuf_rx.rs  uart_it.rs  uart_poll.rs
src/gpio/: mod.rs
src/pac_ext_stf1/: mod.rs  uart.rs
src/rcc/: mod.rs
src/timer/: counter.rs  delay.rs  impl_hal.rs  mod.rs  monotonic.rs  pwm.rs  syst.rs  timer1.rs  timer10.rs  timer11.rs  timer12.rs  timer13.rs  timer14.rs  timer15.rs  timer16.rs  timer17.rs  timer2.rs  timer3.rs  timer4.rs  timer5.rs  timer6.rs  timer7.rs  timer8.rs  timer9.rs  timer_1_8.rs
src/uart/: mod.rs  uart.rs  uart4.rs  uart5.rs  uart_poll.rs  usart.rs  usart1.rs  usart2.rs  usart3.rs
